--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll-parallax": "^3.4.5",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
