--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
