--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"framer-motion": "^11.2.6",
 		"mini-svg-data-uri": "^1.4.4",
 		"next": "^14.2.3",
+		"next-compose-plugins": "^2.2.1",
+		"next-images": "^1.8.5",
 		"next-videos": "^1.4.1",
 		"react": "^18",
 		"react-dom": "^18",
