--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-scroll-parallax": "^3.4.5",
+		"react-type-animation": "^3.2.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-scrollbar-utilities": "^0.2.0",
 		"three": "^0.164.1"
