--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 		"@react-three/fiber": "^8.16.6",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.2.6",
+		"jsonwebtoken": "^9.0.2",
 		"mini-svg-data-uri": "^1.4.4",
 		"next": "^14.2.3",
 		"next-compose-plugins": "^2.2.1",
 		"next-images": "^1.8.5",
 		"next-videos": "^1.4.1",
+		"nodemailer": "^6.9.14",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-scroll-parallax": "^3.4.5",
