--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@om-tlh/react-custom-scrollbars": "^4.2.3",
 		"@react-three/drei": "^9.105.6",
 		"@react-three/fiber": "^8.16.6",
 		"clsx": "^2.1.1",
