--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.2.6",
 		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.428.0",
 		"mini-svg-data-uri": "^1.4.4",
 		"next": "^14.2.3",
 		"next-compose-plugins": "^2.2.1",
